# LangAgent

./: README.md  lms_logs_for_google_search_main.txt  pyproject.toml  run.out
src/lang_agent/: google_search_main.py  main.py
src/lang_agent/agent/: linkedin_scraper.py  url_agent.py
src/lang_agent/decorators/: singleton.py
src/lang_agent/llm/: local_llm.py
src/lang_agent/tool/: tavily_crawler.py
