[project]
name = "lang_chain"
version = "0.1.0"
description = "Lang Chain dev"
authors = [
    {name = "Tejas Vedagiri", email = "tejasvedagiri1223@gmail.com"},
]
dependencies = ["langchain-openai>=0.3.9", "langchain-community>=0.3.20", "langchainhub>=0.1.21", "python-dotenv>=1.0.1", "black>=25.1.0"]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
